--- a/React/react-query/udemy-REACT-QUERY/base-lazy-days/client/package.json
+++ b/React/react-query/udemy-REACT-QUERY/base-lazy-days/client/package.json
@@ -19,10 +19,11 @@
     "@typescript-eslint/parser": "^4.7.0",
     "axios": "^0.24.0",
     "dayjs": "^1.10.4",
-    "eslint": "^7.13.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest-dom": "^3.2.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -36,14 +37,15 @@
     "firebase": "^8.3.1",
     "formik": "^2.2.6",
     "framer-motion": "^3.10.6",
-    "image-webpack-loader": "^7.0.1",
+    "image-webpack-loader": "^8.1.0",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-query": "^3.39.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
