--- a/JavaScript/zoom/package.json
+++ b/JavaScript/zoom/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "io": "^1.0.5",
+    "localtunnel": "^2.0.2",
     "pug": "^3.0.2",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
