--- a/JavaScript/websocket/package.json
+++ b/JavaScript/websocket/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "path": "^0.12.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^8.11.0"
   }
 }
