--- a/ui5/sap.m.tutorial.walkthrough.04/ui5.yaml
+++ b/ui5/sap.m.tutorial.walkthrough.04/ui5.yaml
@@ -1,8 +1,16 @@
 specVersion: '3.0'
 metadata:
-  name: "sap.m.tutorial.walkthrough.04"
+  name: sap_application
 type: application
-resources:
-  configuration:
-    paths:
-      webapp: .
+framework:
+  name: SAPUI5
+  version: "1.114.0"
+server:
+  customMiddleware:
+  - name: ui5-middleware-livereload
+    afterMiddleware: compression
+    configuration:
+      debug: true
+      extraExts: "xml,json,properties"
+      port: 35729
+      watchPath: "webapp"
